[gd_scene load_steps=2 format=3 uid="uid://cxyambk2lq2lw"]

[ext_resource type="Script" path="res://scenes/Menus/pause_menu.gd" id="1_ar0q6"]

[node name="Pause Menu" type="Window"]
title = "Pause Menu"
initial_position = 1
size = Vector2i(720, 480)
script = ExtResource("1_ar0q6")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Pause Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Pause Menu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Menu/PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="Pause Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="Pause Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Save" type="Button" parent="Pause Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Quit" type="Button" parent="Pause Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Pause Menu/PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause Menu/PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Pause Menu/PanelContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Pause Menu/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
